# prosoft-distributed-storage-system

./: .gitignore  CMakeLists.txt  README.md  Storage.cpp  Storage.h  Technical requirements.md  main.cpp  network.h  nodes_config.json
NikitaProject/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp
NikitaProject/src/: CMakeLists.txt
NikitaProject/src/Network/: network.h
TeamProject/docs/: Test_case.txt
TeamProject/src/BusinessLogic/Kernel/: node_logic.h
TeamProject/src/Network/: CMakeLists.txt  client.h  connect_to_node.cpp  node.cpp  packets.h  start_node.cpp
TeamProject/src/Storage/: storage.cpp  storage.h
TeamProject/unit-tests/tests_net/: CMakeLists.txt
docs/: software_req_specification.md
gui/: CmakeLists.txt  main_gui.cpp  mainwindow.cpp  mainwindow.hpp
src/: CMakeLists.txt  CmakeLists.txt
src/Business logic/: CmakeLists.txt  admin_app.h  client_app.h
src/Business logic/Kernel/: json_messages.cpp  node_logic.cpp  node_logic.h
src/BusinessLogic/: client_app.cpp  client_app.h
src/BusinessLogic/Kernel/: node_logic.cpp
src/Network/: CMakeLists.txt  client.cpp  client.h  connect_to_node.cpp  main_server.cpp  network.cpp  node.cpp  node.h  send_packet.cpp  sender.cpp  server.cpp  start_node.cpp  utils.cpp
src/Network/temp/: json_example.cpp  packets.h  test.json
src/Storage/: CmakeLists.txt  allocation_chunks.cpp  chunkJSONtemplate  fileInfoJSONtemplate  filesplitter.cpp  filesplitter.h  hashsummmanager.cpp  hashsummmanager.h  storage.cpp  storage.h  storageclient.cpp  storageclient.h  types.h
unit-tests/tests_net/: main.cpp  tests_net.cpp
unit-tests/tests_storage/: CMakeLists.txt  tests_storage.cpp
